Configure BaseEntityComponent with BaseEntityStore.

--- a/libs/comment/feature/src/lib/comment-list.component.html
+++ b/libs/comment/feature/src/lib/comment-list.component.html
@@ -10,7 +10,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let comment of comments">
+      <tr *ngFor="let comment of entities">
         <td>{{ comment.id }}</td>
         <td>{{ comment.name }}</td>
         <td>{{ comment.email }}</td>
